[project]
name = "odsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes==0.42.0",
    "datasets>=3.2.0",
    "diagrams>=0.24.1",
    "fastapi>=0.115.7",
    "gymnasium[toy-text]>=1.0.0",
    "instructor>=1.7.2",
    "lightgbm",
    "litellm>=1.59.7",
    "matplotlib>=3.10.0",
    "minigrid>=3.0.0",
    "nbformat==5.1.2",
    "numba==0.61.0",
    "numpy>=2.1.3",
    "ollama>=0.4.7",
    "openai>=1.60.1",
    "pandas>=2.2",
    "plotly>=5.24.1",
    "pydantic>=2.10.6",
    "pygam>=0.8.0",
    "python-dotenv>=1.0.1",
    "scikit-learn",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "statsmodels>=0.14.4",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "uvicorn>=0.34.0",
    "xgboost",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
