[project]
name = "odsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diagrams>=0.24.1",
    "gymnasium[toy-text]>=1.0.0",
    "instructor>=1.7.2",
    "litellm>=1.59.7",
    "minigrid>=3.0.0",
    "nbformat==5.1.2",
    "openai>=1.60.1",
    "plotly>=5.24.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "causal-magpy>=0.1.1",
    "causalml>=0.15.2",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "numpy==1.24",
    "plotly>=5.24.1",
    "rich>=13.9.4",
    "statsmodels>=0.14.0",
    "xgboost>=2.1.3",
    "pandas>=2.1.0",
    "matplotlib>=3.9.4",
    "scipy==1.13.1",
    "duckdb>=1.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
